--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="experience.html">Professional Experience</a></li>
         </ul>
       </nav>
     </div>
