--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zexi Gong">
   <meta name="description" content="Zexi Gong's projects">
-  <link rel="icon" href="path_to_your_icon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/author-icon.png" type="image/x-icon">
   <title>Zexi Gong - Projects</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style_projects.css">
+  <link rel="stylesheet" href="css/style_proj_experience.css">
 </head>
 
 <body>
@@ -20,6 +20,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
+          <li><a href="experience.html">Professional Experience</a></li>
         </ul>
       </nav>
     </div>
